<resources>
    <string name="app_name">BAI_tp05</string>
    <string name="file">File</string>
    <string name="create_new">Create new file</string>
    <string name="open">open</string>
    <string name="supprime">supprime</string>
    <string name="ajoute">ajoute</string>
    <string name="list">list</string>
    <string name="liste">liste</string>
    <string name="sigle">Sigle</string>
    <string name="parcours">Parcours</string>
    <string name="categorie">Categorie</string>
    <string name="credit">Credit</string>
    <string name="module">Module</string>
    <string name="room">Room</string>
    <string name="delete">Delete</string>


</resources>
